Fix P2 deployment